vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__case_missing_is.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
case sel
  when 0 => null;
end case;

== tree ==
CaseStatement
  CaseStatementPreamble
    Keyword(Case)
    NameExpression
      Name
        NameDesignatorPrefix
          Identifier 'sel'
  CaseStatementAlternative
    CaseStatementAlternativePreamble
      Keyword(When)
      Choices
        ExpressionChoice
          LiteralExpression
            AbstractLiteral '0'
      RightArrow
    SequenceOfStatements
      NullStatement
        Keyword(Null)
        SemiColon
  CaseStatementEpilogue
    Keyword(End)
    Keyword(Case)
    SemiColon

== diagnostics ==
1:9 expected 'is'
