vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__case_statement.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::case_statement,\n\"\\\ncase foo(1) is\n  when 1 | 2 =>\n    stmt1;\n    stmt2;\n  when others =>\n    stmt3;\n    stmt4;\nend case;\")"
---
CaseStatement
  CaseStatementPreamble
    Keyword(Case)
    NameExpression
      Name
        NameDesignatorPrefix
          Identifier 'foo'
        ParenthesizedName
          LeftPar
          AssociationList
            AssociationElement
              ActualPart
                ActualPartExpression
                  LiteralExpression
                    AbstractLiteral '1'
          RightPar
    Keyword(Is)
  CaseStatementAlternative
    CaseStatementAlternativePreamble
      Keyword(When)
      Choices
        ExpressionChoice
          LiteralExpression
            AbstractLiteral '1'
        Bar
        ExpressionChoice
          LiteralExpression
            AbstractLiteral '2'
      RightArrow
    SequenceOfStatements
      ProcedureCallStatement
        Name
          NameDesignatorPrefix
            Identifier 'stmt1'
        SemiColon
      ProcedureCallStatement
        Name
          NameDesignatorPrefix
            Identifier 'stmt2'
        SemiColon
  CaseStatementAlternative
    CaseStatementAlternativePreamble
      Keyword(When)
      Choices
        OthersChoice
          Keyword(Others)
      RightArrow
    SequenceOfStatements
      ProcedureCallStatement
        Name
          NameDesignatorPrefix
            Identifier 'stmt3'
        SemiColon
      ProcedureCallStatement
        Name
          NameDesignatorPrefix
            Identifier 'stmt4'
        SemiColon
  CaseStatementEpilogue
    Keyword(End)
    Keyword(Case)
    SemiColon
