vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__conditional_signal_assignment_else.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::sequential_statement,\n\"\\\ndata_processing_state <= processing when processing_data else idle;\n        \")"
---
ConditionalWaveformAssignment
  NameTarget
    Name
      Identifier 'data_processing_state'
  LTE
  ConditionalWaveforms
    ConditionalWaveform
      WaveformElements
        WaveformElement
          NameExpression
            Name
              Identifier 'processing'
      Keyword(When)
      NameExpression
        Name
          Identifier 'processing_data'
    ConditionalWaveformElseItem
      Keyword(Else)
      WaveformElements
        WaveformElement
          NameExpression
            Name
              Identifier 'idle'
  SemiColon
