vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__conditional_signal_force_assignment.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "stmt_to_test_text(\"\\\nfoo(0) <= force bar(1,2) when cond;\n        \")"
---
ConditionalForceAssignment
  NameTarget
    Name
      NameDesignatorPrefix
        Identifier 'foo'
      ParenthesizedName
        LeftPar
        AssociationList
          AssociationElement
            ActualPart
              ActualPartExpression
                LiteralExpression
                  AbstractLiteral '0'
        RightPar
  LTE
  Keyword(Force)
  ConditionalExpressions
    WhenExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'bar'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '1'
              Comma
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '2'
            RightPar
      Keyword(When)
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'cond'
  SemiColon
