vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__conditional_variable_assignment.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "stmt_to_test_text(\"\\\nfoo(0) := bar(1,2) when cond = true;\n        \")"
---
ConditionalVariableAssignment
  NameTarget
    Name
      NameDesignatorPrefix
        Identifier 'foo'
      ParenthesizedName
        LeftPar
        AssociationList
          AssociationElement
            ActualPart
              ActualPartExpression
                LiteralExpression
                  AbstractLiteral '0'
        RightPar
  ColonEq
  ConditionalExpressions
    WhenExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'bar'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '1'
              Comma
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '2'
            RightPar
      Keyword(When)
      BinaryExpression
        NameExpression
          Name
            NameDesignatorPrefix
              Identifier 'cond'
        EQ
        NameExpression
          Name
            NameDesignatorPrefix
              Identifier 'true'
  SemiColon
