vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__conditional_waveform_assignment_else.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "stmt_to_test_text(\"\\\ndata_processing_state <= processing when processing_data else idle;\")"
---
ConditionalWaveformAssignment
  NameTarget
    Name
      NameDesignatorPrefix
        Identifier 'data_processing_state'
  LTE
  ConditionalWaveforms
    WhenWaveform
      WaveformElements
        WaveformElement
          NameExpression
            Name
              NameDesignatorPrefix
                Identifier 'processing'
      Keyword(When)
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'processing_data'
    ElseWaveform
      Keyword(Else)
      WaveformElements
        WaveformElement
          NameExpression
            Name
              NameDesignatorPrefix
                Identifier 'idle'
  SemiColon
