vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__empty_case_statement.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
case sel is
end case;

== tree ==
CaseStatement
  CaseStatementPreamble
    Keyword(Case)
    NameExpression
      Name
        NameDesignatorPrefix
          Identifier 'sel'
    Keyword(Is)
  CaseStatementEpilogue
    Keyword(End)
    Keyword(Case)
    SemiColon

== diagnostics ==
1:12 expected CaseStatementAlternative
