vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__empty_if_statement.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::if_statement, \"\\\nif cond = true then\nend if;\")"
---
IfStatement
  IfStatementPreamble
    Keyword(If)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'cond'
      EQ
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'true'
    Keyword(Then)
  IfStatementEpilogue
    Keyword(End)
    Keyword(If)
    SemiColon
