vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__exit_statement.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::exit_statement, \"exit;\")"
---
ExitStatement
  Keyword(Exit)
  SemiColon
